@@ -1,6 +1,8 @@
 Version 3.0-0
 
- o Added partial residuals for multidimensional component+residual plots to Effect.lm() for (multidimensional) component+residual plots.
+ o Added partial residuals for multidimensional component+residual plots to Effect.lm().
+
+ o Small bug fixes.
 
 Version 2.3-0
 
